<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SecondActivity"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="40dp">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="0.45"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/text_operando1"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_weight="0.45"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:id="@+id/operando1_recuperado"
            />


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="40dp">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="0.45"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/text_operando2"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_weight="0.45"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:id="@+id/operando2_recuperado"
            />


    </LinearLayout>
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="40dp">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="0.45"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/text_tipo"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_weight="0.45"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:id="@+id/tipo_recuperado"
            />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_marginTop="40dp">

        <TextView
            android:layout_width="0dp"
            android:layout_weight="0.45"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:text="@string/text_resultado"
            />

        <TextView
            android:layout_width="0dp"
            android:layout_weight="0.45"
            android:layout_height="wrap_content"
            android:textSize="20sp"
            android:id="@+id/resultado_recuperado"
            />


    </LinearLayout>
    <Button
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:textSize="15sp"
        android:text="@string/text_boton_volver"
        android:id="@+id/boton_volver"/>

</LinearLayout>